# Knowledge-Graph-Layer

./: .coverage  .env.example  NewbieQuickStarterGuide.md  README.md  alembic.ini  pyproject.toml  requirements.txt
docs/: api-guide.md  openapi.json  runbook.md
docs/adr/: ADR-0001-entity-taxonomy.md  ADR-0002-relationship-typing.md  ADR-0003-evidence-provenance.md  ADR-0004-versioning-strategy.md  ADR-0005-implementation-language.md  ADR-0006-storage-backend.md
examples/: ingest_and_query.py
migrations/: env.py
migrations/versions/: 001_initial_schema.py
project-memory-bank/: 00-project-vision.md  01-product-thesis.md  02-system-architecture.md  03-current-state.md  04-roadmap.md  05-technical-decisions.md  10-domain-model.md  11-memory-model.md  12-knowledge-graph-model.md  13-query-model.md  14-trust-model.md  20-api-contracts.md  21-storage-design.md  22-graph-schema.md  23-security-model.md  30-active-phase.md  31-active-tasks.md  32-known-issues.md  33-next-actions.md  40-ui-principles.md  41-design-system.md  90-session-handoff.md
scripts/: benchmark_ingestion.py  export_openapi.py
sdk/: pyproject.toml
sdk/knowledge_graph/: __init__.py  client.py  models.py
src/api/: auth.py  cache.py  deps.py  main.py  rate_limit.py  rate_limit_redis.py  security_headers.py  tracing.py
src/domain/: __init__.py  entity.py  enums.py  evidence.py  provenance.py  relationship.py  trust_score.py  version.py
src/ingestion/: __init__.py  conflict_detector.py  deduplicator.py  entity_extractor.py  models.py  (+5 more)
ui/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.tsbuildinfo
(+65 files in other folders)
