[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scp-knowledge-graph-sdk"
version = "0.6.0"
description = "Python SDK for the SCP Knowledge Graph Layer API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["knowledge_graph"]

[tool.mypy]
strict = true
python_version = "3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
